# plane_calibration

./: .cproject  .project  CMakeLists.txt  README.md  package.xml
cfg/: PlaneCalibration.cfg
doc/: notes.md
include/plane_calibration/: calibration_parameters.hpp  calibration_validation.hpp  camera_model.hpp  depth_visualizer.hpp  deviation_planes.hpp  image_msg_eigen_converter.hpp  input_filter.hpp  magic_multiplier_estimation.hpp  plane_calibration.hpp  plane_calibration_nodelet.hpp  plane_to_depth_image.hpp  planes.hpp  visualizer_interface.hpp
launch/: nodelet.launch.xml  sensor_standalone.launch  standalone.launch
params/: defaults.yaml  sensor_defaults.yaml
plugins/: nodelets.xml
src/: CMakeLists.txt  calibration_parameters.cpp  calibration_validation.cpp  camera_model.cpp  depth_visualizer.cpp  deviation_planes.cpp  image_msg_eigen_converter.cpp  input_filter.cpp  magic_multiplier_estimation.cpp  plane_calibration.cpp  plane_calibration_nodelet.cpp  plane_to_depth_image.cpp  planes.cpp
test/: CMakeLists.txt  test_msg_eigen_converter.cpp  test_plane_calibration.cpp  test_plane_to_depth.cpp  test_start.cpp
