<?xml version="1.0"?>
<package>
  <name>plane_calibration</name>
  <version>0.0.0</version>
  <description>The plane calibration package for
  robust on the fly 3d sensor orientation adjustments using the ground floor plane</description>
  <maintainer email="Rei.man.nalex8.8+ROS_PC@gmail.com">Alexander Reimann</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>
</package>